idea/testData/multiplatform/unresolvedInMultiplatformLibrary/jvm/jvm.kt
package sample

fun jvm() {
    println(common())
    println(<!UNRESOLVED_REFERENCE!>js<!>())
}